k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: draco-habits
  namespace: draco-habits
spec:
  replicas: 2
  selector:
    matchLabels:
      app: draco-habits
  template:
    metadata:
      labels:
        app: draco-habits
    spec:
      containers:
      - name: draco-habits
        image: felipebg1/draco-habits:822539e22ca95206e7d83da94598251d6ed57b48
        ports:

        - containerPort: 80
        imagePullPolicy: Always
