k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: draco-service
  namespace: draco-finance # ADICIONE ESTA LINHA
spec:
  selector:
    app: draco-finance
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
